This is the changelog for jom 1.0.4, the parallel make tool.

Changes since jom 1.0.3
- Fix that -j1 wasn't passed to sub jom calls. (QTCREATORBUG-3729)

Changes since jom 1.0.2
- Support variable names with underscores. (QTCREATORBUG-3235)
- Keep order of dependencies on build. This is important for makefiles
  lacking complete dependencies. These might fail in parallel builds
  otherwise.
- Fix issues wrt environment variables. (QTCREATORBUG-3108)

Changes since jom 1.0.1
- Make target names case insensitive. (QTCREATORBUG-3037)
- Fix reading of include files without newline at the end.
  (QTBUG-15021)
- Repair the cmake project file for jom.

Changes since jom 1.0.0
- Cleaner and faster determination of targets that must be built.
- Fix incomplete up-to-date check for inference rule targets.
  (QTCREATORBUG-2713)
- Don't filter comments in inline files. (QTCREATORBUG-2874)

Changes since jom 0.9.4
- Inference rule batch mode implemented.
  This improves performance for makefiles that make heavy use of the batch
  mode, e.g. qmake generated makefiles.
- Improved command execution. No more batch file writing.
- Macro substitution implemented. Macro expansions like
  $(TARGET:suffix=d) are now possible.
- .SUFFIXES content is handled properly.
- Fixed several bugs in file name macro expansion.
- Output of concurrent processes is explicitely separated.

Changes since jom 0.9.3
- Opening files from volume mounted to NTFS directory fixed.
  (QTCREATORBUG-1475)
- Output buffering issue fixed. (QTBUG-10798)

Changes since jom 0.9.2
- Support for multiple inline files per command line added.
- Its now possible to use "." as target name. (QTCREATORBUG-1131)
- Support file name macros in the file name part of inline file defitions.
  (QTCREATORBUG-1136)
- Multiple file name macros per command line are possible now.
- Single name macro invokation was added.
  They can be invoked like this: $A instead of $(A).
- Several bugs related to file name macros have been fixed.